--- a/src/main/resources/templates/series.html
+++ b/src/main/resources/templates/series.html
@@ -25,14 +25,14 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="type : ${types}" >
-							<td th:text="${type.id}"></td>		
-							<td th:text="${type.name}"></td>
+						<tr th:each="serie : ${series}" >
+							<td th:text="${serie.id}"></td>		
+							<td th:text="${serie.name}"></td>
 							<td>
-								<a href="#" th:href="@{/mov/typeForm?id=__${type.id}__}">
+								<a href="#" th:href="@{/mov/serieForm?id=__${serie.id}__}">
 									<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
 								</a>
-								<a href="#" th:href="@{/mov/removeType?id=__${type.id}__}">							
+								<a href="#" th:href="@{/mov/removeSerie?id=__${serie.id}__}">							
 									<button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
 								</a>							
 							</td>
@@ -42,14 +42,14 @@
 			</div>
 			
 			<div th:if="${result==1}"class="alert alert-success" role="alert">Added successfully</div>
-			<div th:if="${result==0}"class="alert alert-danger" role="alert">Error adding type</div>
+			<div th:if="${result==0}"class="alert alert-danger" role="alert">Error adding serie</div>
 			
 			<div class="panel-body">
 				<div class="col-sm-8">
 				</div>
 				<div class="col-sm-2">
-					<a href="#" th:href="@{/mov/typeForm?id=0}">
-						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Agregar Tipo </button>
+					<a href="#" th:href="@{/mov/serieForm?id=0}">
+						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Agregar Serie </button>
 					</a>
 				</div>
 				<div class="col-sm-2">					
