--- a/src/main/resources/templates/emitters.html
+++ b/src/main/resources/templates/emitters.html
@@ -13,7 +13,7 @@
 
  	<body>	
 		<div class="container">
-			<h1>Hello, <span th:text="${username}"></span></h1>
+			<h1> <span th:text="#{title.emitters}" /> </span></h1>
 			<br/>
 			<div class="panel panel-default">					
 				<table class="table table-striped">
@@ -49,12 +49,12 @@
 				</div>
 				<div class="col-sm-2">
 					<a href="#" th:href="@{/mov/emitterForm?id=0}">
-						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Agregar Tipo </button>
+						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span th:text="#{button.add}" /> </button>
 					</a>
 				</div>
 				<div class="col-sm-2">					
 					<a href="#" th:href="@{/mov/showMenu}">		
-						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Cancelar </button>
+						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> <span th:text="#{button.cancel}" /> </button>
 					</a>			
 				</div>
 							
