--- a/src/main/resources/templates/genres.html
+++ b/src/main/resources/templates/genres.html
@@ -13,7 +13,7 @@
 
  	<body>	
 		<div class="container">
-			<h1>Hello, <span th:text="${username}"></span></h1>
+			<h1> <span th:text="#{title.series}" /> </span></h1>
 			<br/>
 			<div class="panel panel-default">					
 				<table class="table table-striped">
@@ -25,14 +25,14 @@
 						</tr>
 					</thead>
 					<tbody>
-						<tr th:each="type : ${types}" >
-							<td th:text="${type.id}"></td>		
-							<td th:text="${type.name}"></td>
+						<tr th:each="genre : ${genres}" >
+							<td th:text="${genre.id}"></td>		
+							<td th:text="${genre.name}"></td>
 							<td>
-								<a href="#" th:href="@{/mov/typeForm?id=__${type.id}__}">
+								<a href="#" th:href="@{/mov/genreForm?id=__${genre.id}__}">
 									<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
 								</a>
-								<a href="#" th:href="@{/mov/removeType?id=__${type.id}__}">							
+								<a href="#" th:href="@{/mov/removeGenre?id=__${genre.id}__}">							
 									<button type="button" class="btn btn-danger"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></button>
 								</a>							
 							</td>
@@ -42,23 +42,23 @@
 			</div>
 			
 			<div th:if="${result==1}"class="alert alert-success" role="alert">Added successfully</div>
-			<div th:if="${result==0}"class="alert alert-danger" role="alert">Error adding type</div>
+			<div th:if="${result==0}"class="alert alert-danger" role="alert">Error adding genre</div>
 			
 			<div class="panel-body">
 				<div class="col-sm-8">
 				</div>
 				<div class="col-sm-2">
-					<a href="#" th:href="@{/mov/typeForm?id=0}">
-						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Agregar Tipo </button>
+					<a href="#" th:href="@{/mov/genreForm?id=0}">
+						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span th:text="#{button.add}" /> </button>
 					</a>
 				</div>
 				<div class="col-sm-2">					
 					<a href="#" th:href="@{/mov/showMenu}">		
-						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Cancelar </button>
+						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> <span th:text="#{button.cancel}" /> </button>
 					</a>					
 				</div>
 							
-				<a href="#" th:href="@{/mov/types}">Rest Request!</a>
+				<a href="#" th:href="@{/mov/genres}">Rest Request!</a>
 							
 			</div>			
 		</div>
