--- a/src/main/resources/templates/series.html
+++ b/src/main/resources/templates/series.html
@@ -13,21 +13,33 @@
 
  	<body>	
 		<div class="container">
-			<h1>Hello, <span th:text="${username}"></span></h1>
+			<h1> <span th:text="#{title.series}" /> </span></h1>
 			<br/>
 			<div class="panel panel-default">					
 				<table class="table table-striped">
 					<thead>
 						<tr>
-							<th width="20%">ID</th>
-							<th width="60%">Name</th>
-							<th width="20%">Actions</th>						
+							<th width="10%">ID</th>
+							<th width="20%">Name</th>
+							<th width="10%">Genre</th>
+							<th width="10%">Seasons</th>
+							<th width="10%">Emitter</th>
+							<th width="10%">State</th>
+							<th width="10%">Origin</th>
+							<th width="10%">Episodes</th>
+							<th width="10%">Actions</th>
 						</tr>
 					</thead>
 					<tbody>
 						<tr th:each="serie : ${series}" >
 							<td th:text="${serie.id}"></td>		
 							<td th:text="${serie.name}"></td>
+							<td th:text="${serie.genre.descripcion}"></td>
+							<td th:text="${serie.seasons}"></td>
+							<td th:text="${serie.emitter.descripcion}"></td>
+							<td th:text="${serie.state.descripcion}"></td>
+							<td th:text="${serie.origin}"></td>
+							<td th:text="${serie.episodes}"></td>
 							<td>
 								<a href="#" th:href="@{/mov/serieForm?id=__${serie.id}__}">
 									<button type="button" class="btn btn-default"><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span></button>
@@ -49,16 +61,16 @@
 				</div>
 				<div class="col-sm-2">
 					<a href="#" th:href="@{/mov/serieForm?id=0}">
-						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> Agregar Serie </button>
+						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-user" aria-hidden="true"></span> <span th:text="#{button.add}" /> </button>
 					</a>
 				</div>
 				<div class="col-sm-2">					
 					<a href="#" th:href="@{/mov/showMenu}">		
-						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> Cancelar </button>
+						<button class="btn btn-lg btn-primary btn-block float-right" type="submit"><span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> <span th:text="#{button.cancel}" /> </button>
 					</a>					
 				</div>
 							
-				<a href="#" th:href="@{/mov/types}">Rest Request!</a>
+				<a href="#" th:href="@{/mov/series}">Rest Request!</a>
 							
 			</div>			
 		</div>
